feat: customize the css property in mixin function

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <h1>Learning Sass</h1>
         <button>Hello</button>
     </header>
-    <div class="info">
+    <div class="contact">
         <h1>Our contact info</h1>
+        <button>Submit</button>
+
         <div class="info">
             <h1>Our Contact info</h1>
             <p>This is our info</p>
